--- a/NhaSachOnline/appsettings.json
+++ b/NhaSachOnline/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-0ILOBMA\\MSSQLSERVER01;Database=NhaSachOnline;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=NhaSachOnline;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
